--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -156,10 +156,12 @@ select {
   vertical-align: inherit;
   border-top: 1px solid#DFDFDF;
   border-right: 1px solid#DFDFDF;
+  border-bottom: 1px solid #DFDFDF;
 }
 .pipelineTable >.v-data-table__wrapper th:nth-of-type(1),
 .pipelineTable >.v-data-table__wrapper td:nth-of-type(1) {
   width: 5%;
+  border-left: 1px solid #DFDFDF;
 }
 .pipelineTable >.v-data-table__wrapper th:nth-of-type(2),
 .pipelineTable >.v-data-table__wrapper td:nth-of-type(2) {
@@ -466,7 +468,10 @@ select {
 }
 .customTable > .value input {
   width: 70%;
-  padding-left: 20px;
+  height: 30px;
+  padding-left: 15px;
+  margin-left :12px;
+  margin-top: 5px;
   border: 1px solid #DFDFDF;
 }
 .customTable  > .value input[type=radio] {
@@ -475,6 +480,7 @@ select {
   border: 1px solid #DFDFDF;
   width:15px;
   height: 40px;
+  margin-top: 0 !important;
   accent-color: #2b4f8c;
 }
 
@@ -489,38 +495,40 @@ select {
   padding:0 !important
 }
 .pipelineUpdateConvertVFT input {
-  width: 100%;
+  width: 70%;
   padding-left: 10px;
-  height: 100%;
+  height: 70%;
+  margin :12px;
   border: 1px solid #dfdfdf;
-  width: 100%;
 }
 .pipelineUpdateConvertVFT th{
   border-top: 2px solid #2b4f8c;
-  background-color: #FBFBFB;
+  background-color: #FBFBFB !important;
 }
 .pipelineUpdateConvertVFT >.v-data-table__wrapper th:nth-of-type(1),
 .pipelineUpdateConvertVFT >.v-data-table__wrapper td:nth-of-type(1) {
-  width: 50%;
+  width: 40%;
   border-left: 1px solid #DFDFDF;
   border-right: 1px solid #DFDFDF;
   border-bottom: 1px solid #DFDFDF;
-  background-color: white;
+  background-color: #FBFBFB;
 }
 .pipelineUpdateConvertVFT >.v-data-table__wrapper th:nth-of-type(2),
 .pipelineUpdateConvertVFT >.v-data-table__wrapper td:nth-of-type(2) {
-  width: 50%;
+  width: 60%;
   border-right: 1px solid #DFDFDF;
   border-bottom: 1px solid #DFDFDF;
-  background-color: white;
   text-align: left !important;
+}
+
+.pipelineUpdateConvertVFT >.v-data-table__wrapper td:nth-of-type(2) {
+  background-color: white;
 }
 
 .pipelineUpdateIdVFT {
   margin-top: 20px;
   text-align: center !important;
 }
-
 .pipelineUpdateIdVFT th.text-start{
   text-align: center !important;
 }
@@ -528,22 +536,20 @@ select {
   text-align: center !important;
   padding: 0 !important;
 }
-
 .pipelineUpdateIdVFT input {
-  width: 100%;
+  width: 70%;
+  height: 70%;
   padding-left: 10px;
-  height: 100%;
+  margin :12px;
   border: 1px solid #dfdfdf;
-  width: 100%;
 }
-
 .pipelineUpdateIdVFT th{
   border-top: 2px solid #2b4f8c;
   background-color: #FBFBFB;
 }
 .pipelineUpdateIdVFT >.v-data-table__wrapper th:nth-of-type(1),
 .pipelineUpdateIdVFT >.v-data-table__wrapper td:nth-of-type(1) {
-  width: 30%;
+  width: 40%;
   border-left: 1px solid #DFDFDF;
   border-right: 1px solid #DFDFDF;
   border-bottom: 1px solid #DFDFDF;
@@ -551,13 +557,14 @@ select {
 }
 .pipelineUpdateIdVFT >.v-data-table__wrapper th:nth-of-type(2),
 .pipelineUpdateIdVFT >.v-data-table__wrapper td:nth-of-type(2) {
-  width: 70%;
+  width: 60%;
   border-right: 1px solid #DFDFDF;
   border-bottom: 1px solid #DFDFDF;
-  background-color: white;
   text-align: left !important;
 }
-
+.pipelineUpdateIdVFT >.v-data-table__wrapper td:nth-of-type(2) {
+  background-color: white;
+}
 .pipelineUpdateButton { 
   background-color: #2B4F8C;
   color: white;
@@ -569,9 +576,122 @@ select {
   width: 95%; 
   margin-top: 5%;
 }
-
 .pipelineUpdateBtnBox {
   width: 95%;
   display: flex; 
   justify-content: flex-end;
+}
+.pipelineCreateNavBox {
+  display: flex; 
+  width: 100%; 
+  height: 10%;
+  justify-content: center;
+}
+.pipelineCreateNavBox .navBoxBtn {
+  background-color: white;
+  border: 1px solid #DFDFDF;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: black;
+  width:13%;
+  height: 50px;
+  position: relative;
+}
+.pipelineCreateNavBox .lastbtn {
+  background-color: white;
+  border: 1px solid #DFDFDF;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: black;
+  width:13%;
+  height: 50px;
+  position: relative;
+}
+.pipelineCreateNavBox .lastbtn:hover {
+  background-color: #2B4F8C;
+  border: 1px solid #DFDFDF;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: white;
+  width:13%;
+  height: 50px;
+  position: relative;
+}
+.pipelineCreateNavBox .navBoxBtn:hover {
+  background-color: #2B4F8C;
+  border: 1px solid #DFDFDF;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: white;
+  width:13%;
+  height: 50px;
+  position: relative;
+}
+.pipelineCreateNavBox .navBoxBtn:hover::before {
+  content: "";
+  right: -15px;
+  border-top: 7px solid transparent; 
+  border-left: 17px solid #2B4F8C; 
+  border-right: 0px solid transparent; 
+  border-bottom: 7px solid transparent;
+  z-index: 2;
+  position: absolute;
+}
+.numberBox{
+  border: 1px solid #DFDFDF;
+  background-color: rgba( 145, 145, 145, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
+  color: black;
+  width:25px;
+  height:25px;
+  margin-right: 10px;
+}
+.pipelineCreateNavBox .lastbtn:hover >  .numberBox{
+  background-color: rgba( 255, 255, 255 ,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
+  color: white;
+  width:25px;
+  height:25px;
+  margin-right: 10px;
+}
+.pipelineCreateNavBox .navBoxBtn:hover >  .numberBox{
+  background-color: rgba( 255, 255, 255 ,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
+  color: white;
+  width:25px;
+  height:25px;
+  margin-right: 10px;
+}
+.pipelineCreateNavBox .navBoxBtn:after {
+  right: -17px;
+  border-top: 7px solid transparent; 
+  border-left: 15px solid #dfdfdf; 
+  border-right: 0px solid transparent; 
+  border-bottom: 7px solid transparent; 
+  z-index: 1;
+  content:""; 
+  position:absolute;
+}
+.pipelineCreateNavBox .navBoxBtn:before {
+  content: "";
+  right: -15px;
+  border-top: 7px solid transparent; 
+  border-left: 17px solid white; 
+  border-right: 0px solid transparent; 
+  border-bottom: 7px solid transparent;
+  z-index: 2;
+  position: absolute;
 }
