--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -462,6 +462,12 @@ select {
   line-height: 40px;
   border: 1px solid #DFDFDF;
 }
+.customTable select {
+  width: 60%;
+  height: 45px;
+  line-height: 40px;
+  border: 1px solid #DFDFDF;
+}
 .customTable > .disf > .value div{
   width: 100%;
   padding-left: 20px;
